fix: fixed layout issues with media cover image

--- a/src/components/media-cover-picture/media-cover-picture.component.css
+++ b/src/components/media-cover-picture/media-cover-picture.component.css
@@ -26,6 +26,8 @@
   align-items: center;
   justify-content: center;
   float: left;
+  width: inherit;
+  height: inherit;
 }
 
 .media-cover-placeholder-icon {
