--- a/src/components/media-track/media-track.component.css
+++ b/src/components/media-track/media-track.component.css
@@ -23,7 +23,8 @@
 }
 
 .media-track-cover {
-  max-width: 50px;
+  width: 50px;
+  height: 50px;
 }
 
 .media-track-action-button {
